--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 
 body {
   background-image: url('http://www.getuwired.com/devtest/Death_to_stock_photography_Vibrant.jpg');
-
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; 
@@ -17,6 +16,70 @@ body {
     align-items: center;
     height: 100vh;
 }
+.menu {
+        background-color: white;
+        color: black;
+        text-align: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 10%;
+        z-index: 1000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+.menu ul {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+    }
+
+    .menu ul li {
+        display: inline-block;
+        position: relative;
+    }
+
+    .menu ul li a {
+        display: block;
+        padding: 35px 35px;
+        text-decoration: underline;
+        color: black;
+    }
+
+    a:hover {
+        background-color: green;
+    }
+
+    .menu ul li:hover > ul {
+        display: block;
+        padding: 15px 15px;
+        color: green
+    }
+
+    .menu ul li ul {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: greenyellow;
+    }
+
+    .menu ul li ul li {
+        display: block;
+    }
+
+    .menu ul li ul li a {
+        padding: 15px 15px;
+    }
+
+    h1 {
+      padding-right: 200px;
+    }
+    
+
 
 .emoji {
 
